Fix buttons out of container

--- a/src/assets/Modal.css
+++ b/src/assets/Modal.css
@@ -14,7 +14,7 @@
 .modal {
   background: var(--white);
   width: 80vw;
-  max-width: 400px;
+  max-width: 500px;
   border-radius: 4px;
   padding: 2rem 1rem;
   text-align: center;
@@ -35,6 +35,7 @@
 
 .btn-container button {
   padding: 0.6rem 2rem;
+  margin: 0 1rem;
   border-radius: 3px;
   transition: background 0.5s, color 0.5s;
 }
@@ -61,7 +62,7 @@
 
 @media (max-width: 768px) {
   .btn-container button {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     margin: 0 0.2rem;
   }
 }
